@@ -2,6 +2,8 @@ Veretino 0.5.0
 What's new:
 * New Database Creation Dialog, combining basic settings and filter creation.
 * A newly creating database can be flagged as immutable ("Deny Changes"), which will prevent changes to it in the future.
+* Improved file type filter creation process.
+    Instead of a Permanent filter, selected extensions can be flexibly remembered between sessions, adapting to the contents of working folders.
 * It is now possible to check the modification date of listed files during database parsing.
     Makes it easier to work with obviously changed items.
 * Now files without read permissions can be excluded when creating the list (customizable).
